--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.0.0-beta3",
+    "chokidar": "^3.5.2",
     "cors": "^2.8.5",
     "firebase": "^8.4.2",
     "react": "^17.0.2",
